--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="game_players">Players in Game</string>
     <string name="spots_left">Spots Left</string>
     <string name="create_game">Create Game</string>
+    <string name="join_game">Tap on a game in the list to join it.</string>
+    <string name="start_game">Start Game</string>
     <string-array name="num_players_list">
         <item>2</item>
         <item>3</item>
