Added ability to change server parameters
Now the LoginActivity has fields for hostIP and hostPort. If those
fields are left blank, they will default to "localhost" and "8080",
respectively.

I also added a SharedPreferences object that will save your login info
from session to session. This won't be very useful until we implement the
database, but I figured it wouldn't hurt to put it in early.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="confirm">Confirm Password</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="host_ip">Host IP Address</string>
+    <string name="host_port">Host Port</string>
     <string name="game_name">Game Name</string>
     <string name="game_players">Players in Game</string>
     <string name="spots_left">Spots Left</string>
