Progress with map setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
         <item>4</item>
         <item>5</item>
     </string-array>
+    <string name="title_activity_game">Game</string>
 </resources>
